styles/default-style.less
/* COLORS
 * When creating a new skin, 
 * copy/paste the following section and 
 * modify color codes.
 *****************************************/

@text-color-1: #F4F4F4;
@text-color-2: #444444;
@background-color-1: #444444;
@background-color-2: #444444;
@border-color-1: #606060;
@border-color-2: #606060;
@infoPanel-color-1: @text-color-1;
@infoPanel-color-2: #5F5F5F;
@rename-color-1: @text-color-2;
@rename-color-2: @text-color-1;
@menu-color-1: @text-color-2;
@menu-color-2: #EEEEEE;
@odd-result-color: rgba(255, 255, 255, 0.2);
@playing-row-color-1: rgba(0,0,0,0.5);
@playing-row-color-2: #FFFFFF;
@selected-color: #A9D9FE;


/* FUNCTIONS
*******************************/

.bottomToolbar() {
	background:-webkit-gradient(linear, left bottom, left top, color-stop(0%, #3E3E3E), color-stop(30%, #4E4E4E), color-stop(70%, #5F5F5F), color-stop(100%, #6F6F6F));
	background:-moz-linear-gradient(center bottom, #3E3E3E 0%, #4E4E4E 30%, #5F5F5F 70%, #6F6F6F 100%);
	background:-o-linear-gradient(bottom, #3E3E3E 0%, #4E4E4E 30%, #5F5F5F 70%, #6F6F6F 100%);
	background:linear-gradient(center bottom, #3E3E3E 0%, #4E4E4E 30%, #5F5F5F 70%, #6F6F6F 100%);
}

.playlistbar() {
    background:-webkit-gradient(linear, left bottom, left top, color-stop(0%, rgb(94,94,94)), color-stop(100%, rgb(114,114,114)));
    background:-moz-linear-gradient(center bottom, rgb(94,94,94) 0%, rgb(114,114,114) 100%);
    background:-o-linear-gradient(center bottom, rgb(94,94,94) 0%, rgb(114,114,114) 100%);
    background:linear-gradient(center bottom, rgb(94,94,94) 0%, rgb(114,114,114) 100%);
    border-top: 1px solid rgb(114,114,114);
    border-bottom: 1px solid rgb(29,29,29);
}

/* DEFAULT
*******************************/
html,
body{ 
	color: @text-color-1;
	background: @background-color-1;
	text-shadow: 0px 0px 0px transparent;
}
input[type=text],
textarea {
	background: @background-color-1;
	color: @text-color-1;
}


/* CONTENT
*******************************/
body {
}
#content {
}

/* LEFT
*******************************/
#content-left {
	background: @background-color-1;
}

/* PLAYLISTS
*******************************/
#left-menu {
}
.playlistElem {
	border-top: 1px solid transparent;
	border-bottom: 1px solid transparent;
	text-shadow: 0px 1px 1px #000;
}
#left-menu > ul > .selected,
#left-menu > .selected:nth-child(odd) {

}

#login {
	border-bottom: 1px solid @border-color-2;
}
#login a {
    color: @text-color-1;
	text-shadow: 0px 1px 1px #000;
	border: 1px solid transparent;
	font-size: 13px;
}

#playlists .remote .title {
    background: url(/images/circle_white.png) center right no-repeat;
}
#playlists .selected.remote .title {
    background-image: url(/images/circle_dark.png);
}
#playlists {
    border-bottom: 1px solid @border-color-2;
}
#new-playlist {
    text-decoration: none;
    color: @text-color-1;
	text-shadow: 0px 1px 1px #000; 
}
#new-playlist span {
}
#left-menu #new-playlist input[type=text],
#left-menu input.rename {
    border: solid 1px @border-color-1;
    color: @rename-color-1;
	background: @rename-color-2;
}
#left-menu .playlistElem.selected {
	background: @selected-color;
    color: @background-color-1;
	text-shadow: 0px 0px 0px transparent;
}

/* TABS
 ***********************************/
#tabs { 
	border-bottom: 1px solid @border-color-2;
}
#tabs li {
}
#left-menu li.loading {
    background-image: url(/images/loading.gif);
    background-repeat: no-repeat;
    background-position: center right;
}

/* CONTROLS
 ***********************************/

#controls {
    .bottomToolbar();
}


/* RIGHT
 ***********************************/

#content-right {
	background: @background-color-2;
}

#search {
}

#search > input[type=text] {
    border: 0;
	background: @background-color-2;
    .border(30px);
}
#search .loader {
	background: url('/images/loading.gif');
}


#results-container {

}
#results-container.target {
    background: inherit;
    color: inherit;
}

.results {
}
.results > .video {
	border-top: solid 1px transparent;
	border-bottom: solid 1px transparent;
	text-shadow: 0px 1px 1px #000; 
}
.results > .video .rating {
    border: 1px solid @text-color-1;
    opacity: 0.6;
}
.results > .video .rating div {
    background: @text-color-1;
}
.results > .video.selected .rating {
    border: 1px solid @text-color-2;
}
.results > .video.selected .rating div {
    background: @text-color-2;
}
.results > .video:nth-child(odd) {
    background-color: @odd-result-color;
}
.results > .playing,
.results > .playing:nth-child(odd) {
    color: @playing-row-color-2;
	background-color: @playing-row-color-1;
	text-shadow: 0px 0px 0px transparent;

} 
.results > .selected, 
.results > .selected:nth-child(odd) {
    background-color: @selected-color;
    color: @text-color-2;
	text-shadow: 0px 1px 1px #FFF;
}
.results > .disabled {
    color: #FFF;
} 

.results > .playlist {
}

.results > .loadMore {
}

.results > .loading {
    background-image: url('/images/loading.gif');
    background-position: center left;
    background-repeat: no-repeat;
}

.results > .video > ul {
}
.results > .video > ul > li { 
}
.results > .video > ul > .playing,
.results > .video > ul > .playing:nth-child(odd) { 
    color: @playing-row-color-2;
	background-color: @playing-row-color-1;
} 
.results > .video > ul > .selected, 
.results > .video > ul > .selected:nth-child(odd) { 
	background-color: @selected-color; 
	color: @text-color-2; 
}
.results > .video > ul > .disabled { 
	color: #FFF; 
}

.alternatives { 
}
.alternatives li {
}
.alternatives > .playing {
	text-shadow: 0px 0px 0px transparent;
}

/* PLAYLISTBAR
*******************************/
#playlistbar {
	text-shadow: 0px 1px 1px #000;
	color: @text-color-1;
	.playlistbar();
}
#playlistbar .title {
    font-weight: bold;
}
#playlistbar .owner {
}
#playlistbar input {
}


/* INFO PANEL
*******************************/

#info-panel {
	color: @infoPanel-color-1;
	background-color: @infoPanel-color-2;
	box-shadow: inset 0px 3px 10px 0px #222;
}
#uploader {
}
#uploader a, #uploader a:visited {
	color: @text-color-1;
}
#related { 
}
#related-span { 
}
#related li {
}

#timeline-container {
    .bottomToolbar();
}
#position-label {
}
#end-label { 
}

/* MISC
******************************************************************************/

/* DRAG N DROP
*******************************/

#dragElem {
    color: @menu-color-1;
    background: @menu-color-2;
    border-radius: 3px;
	box-shadow: 0px 2px 3px rgba(0,0,0,0.8);
}
.target {
	text-shadow: 0px 0px 0px transparent !important;
    color: @menu-color-1;
    background: @menu-color-2;
    border-radius: 3px;
}
#new-playlist.target {
    color: @menu-color-1;
    background: @menu-color-2;
    border-radius: 3px;
}
.reorderable {
    //border-top: 1px solid transparent;
    //border-bottom: 1px solid transparent;
}
.results > .insert-before,
#playlists > .insert-before {
    border-top: 1px solid #eee;
}
.results > .insert-after,
#playlists > .insert-after {
    border-bottom: 1px solid #eee;
}

/* CONTEXT MENU
*******************************/

#contextmenu {
    color: @menu-color-1;
    background: @menu-color-2;
    border-radius: 3px;
}
#contextmenu .option {
}
#contextmenu .option:hover {
    background: @selected-color;
    color: @menu-color-1;
}

/* TRANSLATOR PANEL
*******************************/

.selected-translation {
    border: 2px solid red;
}

